--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "four-alarm",
   "version": "0.0.0",
-  "description": "",
+  "description": "Heat mapping against the Foursquare API",
   "main": "index.coffee",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "Jeff Long",
   "license": "MIT",
   "dependencies": {
