--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Jeff Long",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.1.1",
     "request": "^2.34.0",
     "underscore": "^1.6.0"
   }
