--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.1.1",
+    "morgan": "^1.0.0",
     "request": "^2.34.0",
-    "underscore": "^1.6.0",
-    "morgan": "^1.0.0"
+    "underscore": "^1.6.0"
   }
 }
