--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "author": "Jeff Long",
   "license": "MIT",
   "dependencies": {
+    "dodge": "banterability/dodge",
     "express": "^4.1.1",
-    "morgan": "^1.0.0",
-    "request": "^2.34.0",
-    "underscore": "^1.6.0"
+    "morgan": "^1.0.0"
   }
 }
