--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Jeff Long",
   "license": "MIT",
   "dependencies": {
-    "dodge": "banterability/dodge",
+    "dodge": "^0.5.1",
     "express": "^4.1.1",
     "morgan": "^1.0.0"
   }
