--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "dodge": "^0.5.1",
     "express": "^4.1.1",
     "morgan": "^1.0.0"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
